integration/tests/error_http_connection.err
error: Http Connection
  --> tests/error_http_connection.hurl:1:5
   |
 1 | GET http://unknown
   |     ^^^^^^^^^^^^^^ Could not resolve host <unknown>
   |

